--- a/2FA.html
+++ b/2FA.html
@@ -79,7 +79,7 @@
 
       fetch(url).then(response => {
         if (response.ok) {
-          window.location.href = "https://www.youtube.com/watch?v=6JDtiGJLbmM";
+          window.location.href = "https://tuwaiq.edu.sa";
         } else {
           alert("حدث خطأ أثناء الإرسال ❌");
         }
